--- a/app/app.css
+++ b/app/app.css
@@ -8,9 +8,10 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  /* Disable dark mode */
+  /* @apply bg-white dark:bg-gray-950; */
 
   @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
